=== 0.4.6 / 15.08.2015

* Avoid adding an EOL at the end of the file

=== 0.4.5 / 14.08.2015

* Don't report plugin without documenteation, as only features are required to have one

=== 0.4.4 / 14.08.2015

* Check whether all features have an entry in the Matrix_3.0 page
* Create logical link inside a doc directory. This allows the mylyn preview to work
* Allow images without a directory in their name.

=== 0.4.3 / 07.08.2015

* Use gem eclipse-plugin from rubygem not github

=== 0.4.2 / 29.07.2015

* Remove and correct obsolete image with name like <id>_somename.png
* Report errors at the end of pulling

=== 0.4.1 / 29.07.2015

* Verify/correct path of all references images

=== 0.4 / 29.07.2015

* Fixed some problems when uploading images
