@@ -45,7 +45,6 @@ workspace.pull # get actual mediawiki content and place it under doc inside the 
 workspace.info.show
 pp workspace.views_missing_documentation            # returns an array of plugin-ids
 pp workspace.perspectives_missing_documentation     # returns an array of plugin-ids
-pp workspace.plugins_missing_documentation          # returns an array of plugis
 workspace.push # push doc/*.mediwiki files to the wiki
 
 Or you can inspire you from the spec/*_spec.rb files to see tested examples.
@@ -69,13 +68,20 @@ h3. Conventions
 
 * You must create a directory config with a file hosts.yml containing the mediawiki-gateway configuration (host, username, password)
 
+* Use tag File
+We decided to use only the tag file as https://www.mediawiki.org/wiki/Help:Images/de recommends, even when the legacy tag Image is still supported.
+Also we don't use the tag Datei, as this one is not supported by the Mylin Wikitext extension of Eclipse.
+
 * The push/pull methods use the convention
 ** in page names all '.' are removed
 ** a plugin plugin.name has a page plugin.name
 ** a view view.name with a localized name localized_name has a page <plugin.name>Views<localized_name>
 ** a perspective perspective.name with a localized name localized_name has a page  P_<localized_name>
+** an image file must be lowercase (files which differ only by the case will be deleted)
+** use syntax @[[File:@, not [[Datei: or @[[Image:@
 ** png files should start with their plugin/feature-name followed by '/' by a name or a globally unique name
 ** png files resides inside the 'doc' sub-directory of each plugin/feature
+** inside the doc directoy we create a logical link of the plugin|feature name to the directory. This allows us to edit and preview the mediawiki files using the Mylin Wikitext extension of Eclipse.
 
 h3. Limitations/TODO
 
@@ -89,9 +95,6 @@ h3. Limitations/TODO
 *** ch.elexis.core.application/plugin.xml:            name="%elexis.articleSelectorView">
 ** Missing line [[Datei:Ch.elexis:Artikelauswahl.png]] in http://wiki.elexis.info/ChElexisViewsArtikelArtikelselektor
 * Perspektives: were not uploaded to doc_de
-* No images are pulled/pushed at the moment.
-* Check whether a link to the view exists on the wiki.elexis.info/Hauptseite
-* No support for features at the moment
 * No multilingual support at the moment
 
 
