@@ -53,18 +53,13 @@ describe 'ImageHandling' do
                 ]
     original = IO.read(wiki_file)
     before.each{|string| expect(original).to include string }
-  end
-
-  it "should adapt correctly the image name being in #{@dataDir}" do
-    wiki_file = File.join(@dataDir, 'ch.elexis.icpc', 'doc', 'test.mediawiki')
-    Dir.chdir(@dataDir)
 
     Elexis::Wiki::Interface.fix_image_locations(wiki_file, 'ch.elexis.icpc')
-    after =['tag_one [[Image:ch.elexis.icpc/icpc1.png|image]]',
-      'tag_two [[Image:ch.elexis.icpc/icpc2.png|image]]',
-      'tag_three [[Image:icpc3.png|image]]',
-      'tag_four [[Datei:ch.elexis.icpc/icpc4.png|image]]',
-      'tag_five [[Datei:ch.elexis.icpc/icpc5.png|image]]',
+    after =['tag_one [[File:ch.elexis.icpc/icpc1.png|image]]',
+      'tag_two [[File:ch.elexis.icpc/icpc2.png|image]]',
+      'tag_three [[File:icpc3.png|image]]',
+      'tag_four [[File:ch.elexis.icpc/icpc4.png|image]]',
+      'tag_five [[File:ch.elexis.icpc/icpc5.png|image]]',
                 ]
     changed = IO.read(wiki_file)
     after.each{|string| expect(changed).to include string }
@@ -75,7 +70,7 @@ describe 'ImageHandling' do
     Dir.chdir(@dataDir)
 
     Elexis::Wiki::Interface.fix_image_locations(wiki_file, 'ch.elexis.icpc')
-    after =['tag_three [[Image:icpc3.png|image]]',
+    after =['tag_three [[File:icpc3.png|image]]',
             ]
     changed = IO.read(wiki_file)
     after.each{|string| expect(changed).to include string }
